hotfix: adicionando jwt role em tentativa de evitar o erro 403 /solicitacoes